Setting maximum retrieve limit to 32MB on every attempt, adding maximum 500 length for Paginate method, 10,000 for distinct method. Patch for issue #5
